--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>문의하기 - 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기에 대한 질문, 제안, 또는 피드백이 있으시면 언제든지 문의해주세요.">
+  <link rel="canonical" href="https://lotterysubstription.web.app/contact.html" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
