--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>로또번호 추첨기</title>
+  <title>무료 로또번호 추첨기 - 행운의 번호 생성</title>
+  <meta name="description" content="매주 로또 번호를 고르기 힘드신가요? 저희의 무료 로또 번호 추첨기를 사용하여 행운의 번호 6개를 즉시 받아보세요. 보너스 번호도 가능합니다.">
+  <link rel="canonical" href="https://lotterysubstription.web.app/index.html" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6010797332920736"
      crossorigin="anonymous"></script>
