--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>소개 - 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
+  <link rel="canonical" href="https://lotterysubstription.web.app/about.html" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
