--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>개인정보처리방침 - 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
+  <link rel="canonical" href="https://lotterysubstription.web.app/privacy.html" />
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
