Improve SEO metadata and sitemap

--- a/animal-face.html
+++ b/animal-face.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>동물상 테스트 - 나는 강아지상일까, 고양이상일까?</title>
   <meta name="description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
+  <meta name="keywords" content="동물상 테스트, 강아지상, 고양이상, 얼굴 분석, 인공지능">
   <link rel="canonical" href="https://lotterysubstription.web.app/animal-face.html" />
+  <meta property="og:title" content="동물상 테스트 - 나는 강아지상일까, 고양이상일까?">
+  <meta property="og:description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
+  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta property="og:url" content="https://lotterysubstription.web.app/animal-face.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="동물상 테스트 - 나는 강아지상일까, 고양이상일까?">
+  <meta name="twitter:description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
+  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <style>
     :root {
@@ -256,7 +266,7 @@
     </section>
 
     <footer style="text-align: center; margin-top: 20px; font-size: 14px; opacity: 0.8;">
-      <a href="index.html" style="color: inherit; margin: 0 10px;">로또 번호 생성기</a>
+      <a href="/" style="color: inherit; margin: 0 10px;">로또 번호 생성기</a>
       <a href="about.html" style="color: inherit; margin: 0 10px;">소개</a>
       <a href="contact.html" style="color: inherit; margin: 0 10px;">문의하기</a>
       <a href="privacy.html" style="color: inherit; margin: 0 10px;">개인정보처리방침</a>
