--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>문의하기 - 로또번호 추첨기</title>
-  <meta name="description" content="로또번호 추첨기에 대한 질문, 제안, 또는 피드백이 있으시면 언제든지 문의해주세요.">
+  <title>문의하기 | 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기 사용 중 문의 사항이나 제안이 있다면 연락해 주세요. 빠르게 답변드리겠습니다.">
+  <meta name="keywords" content="로또번호 추첨기, 문의, 피드백, 제안">
   <link rel="canonical" href="https://lotterysubstription.web.app/contact.html" />
+  <meta property="og:title" content="문의하기 - 로또번호 추첨기">
+  <meta property="og:description" content="로또번호 추첨기에 대한 질문, 제안, 또는 피드백이 있으시면 언제든지 문의해주세요.">
+  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta property="og:url" content="https://lotterysubstription.web.app/contact.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="문의하기 - 로또번호 추첨기">
+  <meta name="twitter:description" content="로또번호 추첨기에 대한 질문, 제안, 또는 피드백이 있으시면 언제든지 문의해주세요.">
+  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
@@ -35,7 +45,7 @@
       <button type="submit">보내기</button>
     </form>
     <br>
-    <a href="index.html" class="link-button">홈으로 돌아가기</a>
+    <a href="/" class="link-button">로또번호 추첨기 홈으로 돌아가기</a>
   </main>
 </body>
 </html>
