--- a/privacy.html
+++ b/privacy.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>개인정보처리방침 - 로또번호 추첨기</title>
-  <meta name="description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
+  <title>개인정보처리방침 | 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기의 개인정보 수집 항목과 이용 목적, 보관 기간을 안내합니다.">
+  <meta name="keywords" content="개인정보처리방침, 로또번호 추첨기, 개인정보, 쿠키">
   <link rel="canonical" href="https://lotterysubstription.web.app/privacy.html" />
+  <meta property="og:title" content="개인정보처리방침 - 로또번호 추첨기">
+  <meta property="og:description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
+  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta property="og:url" content="https://lotterysubstription.web.app/privacy.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="개인정보처리방침 - 로또번호 추첨기">
+  <meta name="twitter:description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
+  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
@@ -57,7 +67,7 @@
     
     <p>본 방침은 2026년 1월 30일부터 시행됩니다.</p>
     <br>
-    <a href="index.html" class="link-button">홈으로 돌아가기</a>
+    <a href="/" class="link-button">로또번호 추첨기 홈으로 돌아가기</a>
   </main>
 </body>
 </html>
