--- a/about.html
+++ b/about.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>소개 - 로또번호 추첨기</title>
-  <meta name="description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
+  <title>소개 | 로또번호 추첨기</title>
+  <meta name="description" content="로또번호 추첨기의 목적과 주요 기능을 소개합니다. 무료 번호 생성과 보너스 옵션을 제공해요.">
+  <meta name="keywords" content="로또번호 추첨기, 소개, 로또, 로또번호 생성기">
   <link rel="canonical" href="https://lotterysubstription.web.app/about.html" />
+  <meta property="og:title" content="소개 - 로또번호 추첨기">
+  <meta property="og:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
+  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta property="og:url" content="https://lotterysubstription.web.app/about.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="소개 - 로또번호 추첨기">
+  <meta name="twitter:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
+  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
@@ -38,7 +48,7 @@
       <li>다크/라이트 모드 지원으로 눈이 편안한 환경</li>
     </ul>
     <p>이곳에서 생성된 번호가 여러분께 작은 행운을 가져다주길 바랍니다. 저희는 앞으로도 사용자의 편의를 위해 지속적으로 사이트를 개선해 나갈 것입니다.</p>
-    <a href="index.html" class="link-button">홈으로 돌아가기</a>
+    <a href="/" class="link-button">로또번호 추첨기 홈으로 돌아가기</a>
   </main>
 </body>
 </html>
