--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>무료 로또번호 추첨기 - 행운의 번호 생성</title>
-  <meta name="description" content="매주 로또 번호를 고르기 힘드신가요? 저희의 무료 로또 번호 추첨기를 사용하여 행운의 번호 6개를 즉시 받아보세요. 보너스 번호도 가능합니다.">
-  <link rel="canonical" href="https://lotterysubstription.web.app/index.html" />
+  <title>로또번호 추첨기 | 무료 로또 번호 6개 생성</title>
+  <meta name="description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
+  <meta name="keywords" content="로또, 로또번호, 로또번호 추첨기, 로또번호 생성기, 무료 로또">
+  <link rel="canonical" href="https://lotterysubstription.web.app/" />
+  <meta property="og:title" content="로또번호 추첨기 | 무료 로또 번호 6개 생성">
+  <meta property="og:description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
+  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta property="og:url" content="https://lotterysubstription.web.app/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="로또번호 추첨기 | 무료 로또 번호 6개 생성">
+  <meta name="twitter:description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
+  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6010797332920736"
      crossorigin="anonymous"></script>
