--- a/about.html
+++ b/about.html
@@ -6,16 +6,16 @@
   <title>소개 | 로또번호 추첨기</title>
   <meta name="description" content="로또번호 추첨기의 목적과 주요 기능을 소개합니다. 무료 번호 생성과 보너스 옵션을 제공해요.">
   <meta name="keywords" content="로또번호 추첨기, 소개, 로또, 로또번호 생성기">
-  <link rel="canonical" href="https://lotterysubstription.web.app/about.html" />
+  <link rel="canonical" href="https://478334c9.productbuilder1-2wa.pages.dev/about.html" />
   <meta property="og:title" content="소개 - 로또번호 추첨기">
   <meta property="og:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
-  <meta property="og:image" content="https://lotterysubstription.web.app/favicon.svg">
-  <meta property="og:url" content="https://lotterysubstription.web.app/about.html">
+  <meta property="og:image" content="https://478334c9.productbuilder1-2wa.pages.dev/favicon.svg">
+  <meta property="og:url" content="https://478334c9.productbuilder1-2wa.pages.dev/about.html">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="소개 - 로또번호 추첨기">
   <meta name="twitter:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
-  <meta name="twitter:image" content="https://lotterysubstription.web.app/favicon.svg">
+  <meta name="twitter:image" content="https://478334c9.productbuilder1-2wa.pages.dev/favicon.svg">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
