Improve SEO metadata

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <meta name="description" content="로또번호 추첨기의 목적과 주요 기능을 소개합니다. 무료 번호 생성과 보너스 옵션을 제공해요.">
   <meta name="keywords" content="로또번호 추첨기, 소개, 로또, 로또번호 생성기">
   <link rel="canonical" href="https://productbuilder1-2wa.pages.dev/about.html" />
+  <meta property="og:site_name" content="로또번호 추첨기">
   <meta property="og:title" content="소개 - 로또번호 추첨기">
   <meta property="og:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
   <meta property="og:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
@@ -16,8 +17,36 @@
   <meta name="twitter:title" content="소개 - 로또번호 추첨기">
   <meta name="twitter:description" content="로또번호 추첨기 사이트를 소개합니다. 저희는 사용자에게 즐거운 경험을 제공하는 것을 목표로 합니다.">
   <meta name="twitter:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <link rel="preload" href="style.css" as="style">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <script>
+    (function () {
+      var primaryHost = "productbuilder1-2wa.pages.dev";
+      var host = window.location.hostname;
+      if (host && host !== primaryHost && host !== "localhost" && host !== "127.0.0.1") {
+        var target = "https://" + primaryHost + window.location.pathname + window.location.search + window.location.hash;
+        window.location.replace(target);
+      }
+    })();
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AboutPage",
+      "name": "소개 | 로또번호 추첨기",
+      "url": "https://productbuilder1-2wa.pages.dev/about.html",
+      "inLanguage": "ko",
+      "description": "로또번호 추첨기의 목적과 주요 기능을 소개합니다. 무료 번호 생성과 보너스 옵션을 제공해요.",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "로또번호 추첨기",
+        "url": "https://productbuilder1-2wa.pages.dev/"
+      }
+    }
+  </script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-41WW1TN2V0"></script>
   <script>
