--- a/animal-face.html
+++ b/animal-face.html
@@ -7,6 +7,7 @@
   <meta name="description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
   <meta name="keywords" content="동물상 테스트, 강아지상, 고양이상, 얼굴 분석, 인공지능">
   <link rel="canonical" href="https://productbuilder1-2wa.pages.dev/animal-face.html" />
+  <meta property="og:site_name" content="로또번호 추첨기">
   <meta property="og:title" content="동물상 테스트 - 나는 강아지상일까, 고양이상일까?">
   <meta property="og:description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
   <meta property="og:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
@@ -16,7 +17,33 @@
   <meta name="twitter:title" content="동물상 테스트 - 나는 강아지상일까, 고양이상일까?">
   <meta name="twitter:description" content="얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.">
   <meta name="twitter:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <script>
+    (function () {
+      var primaryHost = "productbuilder1-2wa.pages.dev";
+      var host = window.location.hostname;
+      if (host && host !== primaryHost && host !== "localhost" && host !== "127.0.0.1") {
+        var target = "https://" + primaryHost + window.location.pathname + window.location.search + window.location.hash;
+        window.location.replace(target);
+      }
+    })();
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "동물상 테스트 - 나는 강아지상일까, 고양이상일까?",
+      "url": "https://productbuilder1-2wa.pages.dev/animal-face.html",
+      "inLanguage": "ko",
+      "description": "얼굴 사진을 업로드하여 인공지능이 당신의 동물상을 분석해줍니다. 강아지상인지 고양이상인지 확인해보세요.",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "로또번호 추첨기",
+        "url": "https://productbuilder1-2wa.pages.dev/"
+      }
+    }
+  </script>
   <style>
     :root {
       --bg1: #ffefba;
