--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
   <meta name="keywords" content="로또, 로또번호, 로또번호 추첨기, 로또번호 생성기, 무료 로또">
   <link rel="canonical" href="https://productbuilder1-2wa.pages.dev/" />
+  <meta property="og:site_name" content="로또번호 추첨기">
   <meta property="og:title" content="로또번호 추첨기 | 무료 로또 번호 6개 생성">
   <meta property="og:description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
   <meta property="og:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
@@ -16,10 +17,50 @@
   <meta name="twitter:title" content="로또번호 추첨기 | 무료 로또 번호 6개 생성">
   <meta name="twitter:description" content="버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.">
   <meta name="twitter:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <meta name="naver-site-verification" content="d7fdec3fb6d5fc772af21d9da0bc56d8f49df584" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <link rel="preload" href="style.css" as="style">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <script>
+    (function () {
+      var primaryHost = "productbuilder1-2wa.pages.dev";
+      var host = window.location.hostname;
+      if (host && host !== primaryHost && host !== "localhost" && host !== "127.0.0.1") {
+        var target = "https://" + primaryHost + window.location.pathname + window.location.search + window.location.hash;
+        window.location.replace(target);
+      }
+    })();
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "@id": "https://productbuilder1-2wa.pages.dev/#website",
+          "name": "로또번호 추첨기",
+          "url": "https://productbuilder1-2wa.pages.dev/",
+          "inLanguage": "ko",
+          "description": "버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요."
+        },
+        {
+          "@type": "WebPage",
+          "@id": "https://productbuilder1-2wa.pages.dev/#webpage",
+          "name": "로또번호 추첨기 | 무료 로또 번호 6개 생성",
+          "url": "https://productbuilder1-2wa.pages.dev/",
+          "inLanguage": "ko",
+          "description": "버튼 한 번으로 1~45 사이 로또 번호 6개를 무작위로 생성합니다. 보너스 번호 포함 여부도 선택할 수 있어요.",
+          "isPartOf": {
+            "@id": "https://productbuilder1-2wa.pages.dev/#website"
+          }
+        }
+      ]
+    }
+  </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6010797332920736"
      crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-41WW1TN2V0"></script>
   <script>
