--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,7 @@
   <meta name="description" content="로또번호 추첨기의 개인정보 수집 항목과 이용 목적, 보관 기간을 안내합니다.">
   <meta name="keywords" content="개인정보처리방침, 로또번호 추첨기, 개인정보, 쿠키">
   <link rel="canonical" href="https://productbuilder1-2wa.pages.dev/privacy.html" />
+  <meta property="og:site_name" content="로또번호 추첨기">
   <meta property="og:title" content="개인정보처리방침 - 로또번호 추첨기">
   <meta property="og:description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
   <meta property="og:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
@@ -16,8 +17,36 @@
   <meta name="twitter:title" content="개인정보처리방침 - 로또번호 추첨기">
   <meta name="twitter:description" content="로또번호 추첨기의 개인정보처리방침입니다. 사용자의 개인정보를 소중하게 생각하며 관련 법률을 준수합니다.">
   <meta name="twitter:image" content="https://productbuilder1-2wa.pages.dev/favicon.svg">
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" sizes="any">
+  <link rel="apple-touch-icon" href="/favicon.svg">
+  <link rel="preload" href="style.css" as="style">
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="style.css"></noscript>
+  <script>
+    (function () {
+      var primaryHost = "productbuilder1-2wa.pages.dev";
+      var host = window.location.hostname;
+      if (host && host !== primaryHost && host !== "localhost" && host !== "127.0.0.1") {
+        var target = "https://" + primaryHost + window.location.pathname + window.location.search + window.location.hash;
+        window.location.replace(target);
+      }
+    })();
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "PrivacyPolicy",
+      "name": "개인정보처리방침 | 로또번호 추첨기",
+      "url": "https://productbuilder1-2wa.pages.dev/privacy.html",
+      "inLanguage": "ko",
+      "description": "로또번호 추첨기의 개인정보 수집 항목과 이용 목적, 보관 기간을 안내합니다.",
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "로또번호 추첨기",
+        "url": "https://productbuilder1-2wa.pages.dev/"
+      }
+    }
+  </script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-41WW1TN2V0"></script>
   <script>
