--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
   <main class="card">
     <h1>🎲 로또번호 추첨기</h1>
     <p>
-      매주 어떤 번호를 선택할지 고민되시나요? '로또번호 추첨기'가 그 고민을 덜어드립니다.
-      버튼 클릭 한 번으로 공정하고 무작위적인 알고리즘을 통해 행운의 번호 6개를 추천받을 수 있습니다.
-      보너스 번호가 필요하시면 옵션을 선택하여 함께 추첨할 수도 있습니다.
+      매주 어떤 번호를 선택할지 고민되시나요? 이 페이지는 버튼 클릭 한 번으로 1~45 사이 로또 번호 6개를
+      공정하고 무작위적으로 추천해 드립니다. 보너스 번호가 필요하시면 옵션을 선택하여 함께 추첨할 수 있어요.
     </p>
     <p>
-      본 추첨기는 통계적 편향 없이 1부터 45까지의 모든 번호가 동일한 확률로 선택되도록 설계되었습니다.
-      생성된 번호를 참고하여 여러분만의 행운의 조합을 만들어보세요.
+      로또를 처음 시도하는 분, 매주 다른 조합이 필요하신 분, 친구들과 재미로 번호를 뽑고 싶은 분 모두
+      부담 없이 사용하실 수 있습니다. 생성된 번호는 참고용이며, 동일한 확률로 선택되도록 설계되었습니다.
     </p>
 
     <div class="row">
@@ -113,8 +112,25 @@
     </div>
 
     <div class="meta" id="meta"></div>
+    <p class="meta" style="margin-top: 6px;">업데이트: 2026년 2월 3일</p>
   </main>
   
+  <section class="card" aria-label="자주 묻는 질문">
+    <h2>자주 묻는 질문</h2>
+    <div class="faq">
+      <h3>Q. 이 로또번호 추첨기는 어떤 상황에 유용한가요?</h3>
+      <p>A. 매주 번호를 고르는 데 시간이 걸릴 때, 빠르게 공정한 조합이 필요할 때, 또는 친구들과 이벤트용 번호를 만들 때 유용합니다.</p>
+      <h3>Q. 번호는 어떻게 생성되나요?</h3>
+      <p>A. 1~45 숫자를 무작위로 섞은 뒤 6개를 선택합니다. 보너스 번호는 옵션을 켜면 추가로 제공됩니다.</p>
+      <h3>Q. 보너스 번호는 꼭 포함해야 하나요?</h3>
+      <p>A. 아니요. 보너스 번호는 선택 사항이며, 체크박스로 포함 여부를 결정할 수 있습니다.</p>
+      <h3>Q. 생성된 번호를 저장하거나 공유할 수 있나요?</h3>
+      <p>A. 네. ‘복사’ 버튼을 누르면 클립보드에 저장되어 카카오톡이나 메모 앱에 바로 붙여넣을 수 있어요.</p>
+      <h3>Q. 모바일에서도 잘 동작하나요?</h3>
+      <p>A. 네. 모바일과 데스크톱 모두에서 빠르게 사용할 수 있도록 반응형으로 구성했습니다.</p>
+    </div>
+  </section>
+
   <div class="subscribe-container">
       <h2>매일 로또 번호를 받아보세요!</h2>
       <form action="https://formspree.io/f/xkobjbrd" method="POST" class="subscribe-form">
@@ -268,6 +284,54 @@
         alert("복사했어요!");
       }
     });
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "이 로또번호 추첨기는 어떤 상황에 유용한가요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "매주 번호를 고르는 데 시간이 걸릴 때, 빠르게 공정한 조합이 필요할 때, 또는 친구들과 이벤트용 번호를 만들 때 유용합니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "번호는 어떻게 생성되나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "1~45 숫자를 무작위로 섞은 뒤 6개를 선택합니다. 보너스 번호는 옵션을 켜면 추가로 제공됩니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "보너스 번호는 꼭 포함해야 하나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "아니요. 보너스 번호는 선택 사항이며, 체크박스로 포함 여부를 결정할 수 있습니다."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "생성된 번호를 저장하거나 공유할 수 있나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "네. ‘복사’ 버튼을 누르면 클립보드에 저장되어 카카오톡이나 메모 앱에 바로 붙여넣을 수 있어요."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "모바일에서도 잘 동작하나요?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "네. 모바일과 데스크톱 모두에서 빠르게 사용할 수 있도록 반응형으로 구성했습니다."
+          }
+        }
+      ]
+    }
   </script>
 </body>
 </html>
