--- a/index.html
+++ b/index.html
@@ -138,7 +138,21 @@
         <input type="email" name="email" placeholder="이메일 주소를 입력하세요" required>
         <button type="submit">구독하기</button>
       </form>
-      <a class="link-button" href="animal-face.html">🐶🐱 동물상 테스트 하러가기</a>
+      <!-- AddToAny BEGIN -->
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style" aria-label="SNS 공유">
+        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+        <a class="a2a_button_facebook"></a>
+        <a class="a2a_button_kakao"></a>
+        <a class="a2a_button_reddit"></a>
+        <a class="a2a_button_twitter"></a>
+        <a class="a2a_button_threads"></a>
+        <a class="a2a_button_whatsapp"></a>
+        <a class="a2a_button_linkedin"></a>
+        <a class="a2a_button_line"></a>
+        <a class="a2a_button_copy_link"></a>
+      </div>
+      <script defer src="https://static.addtoany.com/menu/page.js"></script>
+      <!-- AddToAny END -->
   </div>
 
   <section class="card comments-card" aria-label="댓글">
