Add Userback widget script

--- a/index.html
+++ b/index.html
@@ -347,5 +347,13 @@
       ]
     }
   </script>
+
+  <script>
+    window.Userback = window.Userback || {};
+    Userback.access_token = "A-sgMCnjnw3FwRrWy8Y0mwKq0xt";
+    (function(d) {
+      var s = d.createElement('script');s.async = true;s.src = 'https://static.userback.io/widget/v1.js';(d.head || d.body).appendChild(s);
+    })(document);
+  </script>
 </body>
 </html>
